--- a/ui/src/components/Comment/index.scss
+++ b/ui/src/components/Comment/index.scss
@@ -30,7 +30,7 @@
         }
       }
     }
-    border-bottom: 1px solid var(--bs-colors-gray-200, #E9ECEF);
+    border-bottom: 1px solid var(--an-comment-item-border-bottom);
   }
   .fmt {
     display: inline;
