--- a/ui/src/components/SideNav/index.scss
+++ b/ui/src/components/SideNav/index.scss
@@ -47,7 +47,7 @@
     right: 12px;
     width: 1px;
     height: 100%;
-    background-color: var(--bs-gray-300);
+    background-color: var(--bs-border-color);
     min-height: calc(100vh - 62px - 74px);
   }
 }
